src/App.css
.App {
    height: 100vh;
    display: flex;
    flex-direction: column;
    overflow: hidden;
}

.ScrollContainer {
    flex: 1 0 25%;
    background-color: white;
    border: 2px solid #E1E1E1;
    margin: 0 10px;
    font-size: 16px;
    position: relative;
}
.ScrollContainerData {
    overflow-y: scroll;
    padding: 0 20px;
    height: 100%;
}

.TimelineButton {
    padding: 10px;
    margin: 5px;
    background-color: transparent;
    border: none;
    font-size: 20px;
    outline: none;
    cursor: pointer;
}
.TimelineButton:hover {
    background-color: #E1E1E1;
}

.annotationsSidebar {
    flex: 0 0 300px;
    border: 2px solid #E1E1E1;
    background-color: white;
    border-right: none;
    margin-left: 5px;
}

.annoationsLayout {
    display: flex;
    flex-direction: column;
    height: 100%;
}

.annotationsList {
    flex-grow: 1;
    padding: 10px;
    overflow-y: scroll;
}

.annotationsAdd {
    padding: 10px;
    border-top: 2px solid #E1E1E1;
    background-color: #BBDDEE;
}
.annotationsAdd textarea {
    width: 100%;
    height: 100px;
    font-family: 'Source Code Pro', monospace;
    font-size: 18px;
    padding: 10px;
}
.annotationsAdd button {
    width: 100%;
    height: 30px;
    margin-top: 10px;
    font-size: 18px;
}

.menuButton {
    background-color: #E1E1E1;
    color: #333;
    border: none;
    outline: none;
    cursor: pointer;
}
.menuButton:hover {
    background-color: #BBDDEE !important;
}
.menuButton.enabledButton {
    background-color: white;
    color: #999;
}

.DataViewHeader {
    position: absolute;
    background: #E1E1E1;
    width: 100%;
    z-index: 10;
    border: 2px solid #E1E1E1;
    border-bottom-width: 3px;
    box-sizing: border-box;
    height: 32px;
}

.menuDropdown {
    height: 24px;
    width: 110px;
    position: relative;
    top: -5px;
    border: 0;
    padding-left: 7px;
    margin-left: 5px;
    background-color: white;
    outline: 1px solid white;
    outline-offset: -1px;
    -webkit-appearance: none;
    -webkit-border-radius: 0px;
    font-family: 'Source Code Pro', monospace;
    font-size: 16px;
    color: blue;
}

